Made some grammar changes and fixed some spacing, notes of changes are in the readme

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,5 +9,35 @@ h1{
 }
 body{
   background-color:  blue;
+}
+table{
+  text-align: center;
+  border: black, 10px;
+  background-color: white;
+}
+th{
+  border: black solid 5px;
 
+}
+body{
+  background-color: #FCD573;
+}
+#totals{
+  background-color: grey;
+}
+tr{
+  border: black solid 1px;
+}
+div{
+  background-position: left;
+  background-color: green;
+  font-size: 25px;
+  font-family: fantasy;
+}
+h1{
+  border: black;
+}
+img {
+  margin-left: auto;
+  margin-right: auto;
 }
